# Bio_Grid

./: README.md  index.html  package.json
docs/: PLAYBOOK.md  RULES.md  TAICHI_MIGRATION_PHASE1_PHASE2.md
py/: README.md  bench_fast.py  pyproject.toml
py/biogrid/: __init__.py  config.py  dev_backend.py  export_render.py  render.py  rng.py  state.py  tick.py  tick_fast_ti.py  viewer.py  world_ti.py
py/biogrid.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
py/tests/: test_align.py  test_js_alignment.py
py/tests/fixtures/: golden_24x24_t10.json  golden_24x24_t50.json  initial_24x24.json
scripts/: balance-check.mjs  child-biomass-sweep.mjs  cluster-check.mjs  dev-all.mjs  dev-server.mjs  export_snapshot.mjs  gene-effect-check.mjs  lifespan-sweep.mjs  overflow-cap-sweep.mjs  param-search.mjs  run_ticks_and_export.mjs
src/: config.js  main-dom.js  main-interactions.js  main-shared-channels.js  main-tabs.js  main.js  render.js  sim-core.js  sim-worker.js  styles.css
src/sim/: brush.js  index.js  presets.js  rng.js  shared.js  tick.js  world.js
src/workers/sim-worker/: history.js  index.js  render.js  snapshots.js  terrain.js
tests/: sim-core.test.js  test_balance.js  test_balance2.js  test_battery.js
