[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "biogrid"
version = "0.1.0"
description = "Bio-Grid: Python + Taichi 生态模拟器"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "numpy>=1.20.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
]
taichi = [
    "taichi>=1.6.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["biogrid*"]
